COSC261/Labs/Assignment/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Statements
Rule 2     Statements -> Statement
Rule 3     Statements -> Statements SEM Statement
Rule 4     Statement -> If
Rule 5     Statement -> If-Else
Rule 6     Statement -> While
Rule 7     Statement -> Write
Rule 8     Statement -> Read
Rule 9     Statement -> Assignment
Rule 10    If -> IF Comparison THEN Statements END
Rule 11    If-Else -> IF Comparison THEN Statements ELSE Statements END
Rule 12    While -> WHILE Comparison DO Statements END
Rule 13    Assignment -> Id BEC Expression
Rule 14    Comparison -> Expression Relation Expression
Rule 15    Relation -> EQ
Rule 16    Relation -> NEQ
Rule 17    Relation -> LESS
Rule 18    Relation -> LEQ
Rule 19    Relation -> GRTR
Rule 20    Relation -> GEQ
Rule 21    Expression -> Expression ADD Expression
Rule 22    Expression -> Expression SUB Expression
Rule 23    Expression -> Expression MUL Expression
Rule 24    Expression -> Expression DIV Expression
Rule 25    Expression -> LPAR Expression RPAR
Rule 26    Expression -> NUM
Rule 27    Expression -> Id
Rule 28    Id -> ID
Rule 29    Read -> READ Id
Rule 30    Write -> WRITE Expression

Terminals, with rules where they appear

ADD                  : 21
BEC                  : 13
DIV                  : 24
DO                   : 12
ELSE                 : 11
END                  : 10 11 12
EQ                   : 15
GEQ                  : 20
GRTR                 : 19
ID                   : 28
IF                   : 10 11
LEQ                  : 18
LESS                 : 17
LPAR                 : 25
MUL                  : 23
NEQ                  : 16
NUM                  : 26
READ                 : 29
RPAR                 : 25
SEM                  : 3
SUB                  : 22
THEN                 : 10 11
WHILE                : 12
WRITE                : 30
error                : 

Nonterminals, with rules where they appear

Assignment           : 9
Comparison           : 10 11 12
Expression           : 13 14 14 21 21 22 22 23 23 24 24 25 30
Id                   : 13 27 29
If                   : 4
If-Else              : 5
Program              : 0
Read                 : 8
Relation             : 14
Statement            : 2 3
Statements           : 1 3 10 11 11 12
While                : 6
Write                : 7

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Statements
    (2) Statements -> . Statement
    (3) Statements -> . Statements SEM Statement
    (4) Statement -> . If
    (5) Statement -> . If-Else
    (6) Statement -> . While
    (7) Statement -> . Write
    (8) Statement -> . Read
    (9) Statement -> . Assignment
    (10) If -> . IF Comparison THEN Statements END
    (11) If-Else -> . IF Comparison THEN Statements ELSE Statements END
    (12) While -> . WHILE Comparison DO Statements END
    (30) Write -> . WRITE Expression
    (29) Read -> . READ Id
    (13) Assignment -> . Id BEC Expression
    (28) Id -> . ID

    IF              shift and go to state 10
    WHILE           shift and go to state 11
    WRITE           shift and go to state 12
    READ            shift and go to state 13
    ID              shift and go to state 15

    Program                        shift and go to state 1
    Statements                     shift and go to state 2
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    If-Else                        shift and go to state 5
    While                          shift and go to state 6
    Write                          shift and go to state 7
    Read                           shift and go to state 8
    Assignment                     shift and go to state 9
    Id                             shift and go to state 14

state 1

    (0) S' -> Program .



state 2

    (1) Program -> Statements .
    (3) Statements -> Statements . SEM Statement

    $end            reduce using rule 1 (Program -> Statements .)
    SEM             shift and go to state 16


state 3

    (2) Statements -> Statement .

    SEM             reduce using rule 2 (Statements -> Statement .)
    $end            reduce using rule 2 (Statements -> Statement .)
    END             reduce using rule 2 (Statements -> Statement .)
    ELSE            reduce using rule 2 (Statements -> Statement .)


state 4

    (4) Statement -> If .

    SEM             reduce using rule 4 (Statement -> If .)
    $end            reduce using rule 4 (Statement -> If .)
    END             reduce using rule 4 (Statement -> If .)
    ELSE            reduce using rule 4 (Statement -> If .)


state 5

    (5) Statement -> If-Else .

    SEM             reduce using rule 5 (Statement -> If-Else .)
    $end            reduce using rule 5 (Statement -> If-Else .)
    END             reduce using rule 5 (Statement -> If-Else .)
    ELSE            reduce using rule 5 (Statement -> If-Else .)


state 6

    (6) Statement -> While .

    SEM             reduce using rule 6 (Statement -> While .)
    $end            reduce using rule 6 (Statement -> While .)
    END             reduce using rule 6 (Statement -> While .)
    ELSE            reduce using rule 6 (Statement -> While .)


state 7

    (7) Statement -> Write .

    SEM             reduce using rule 7 (Statement -> Write .)
    $end            reduce using rule 7 (Statement -> Write .)
    END             reduce using rule 7 (Statement -> Write .)
    ELSE            reduce using rule 7 (Statement -> Write .)


state 8

    (8) Statement -> Read .

    SEM             reduce using rule 8 (Statement -> Read .)
    $end            reduce using rule 8 (Statement -> Read .)
    END             reduce using rule 8 (Statement -> Read .)
    ELSE            reduce using rule 8 (Statement -> Read .)


state 9

    (9) Statement -> Assignment .

    SEM             reduce using rule 9 (Statement -> Assignment .)
    $end            reduce using rule 9 (Statement -> Assignment .)
    END             reduce using rule 9 (Statement -> Assignment .)
    ELSE            reduce using rule 9 (Statement -> Assignment .)


state 10

    (10) If -> IF . Comparison THEN Statements END
    (11) If-Else -> IF . Comparison THEN Statements ELSE Statements END
    (14) Comparison -> . Expression Relation Expression
    (21) Expression -> . Expression ADD Expression
    (22) Expression -> . Expression SUB Expression
    (23) Expression -> . Expression MUL Expression
    (24) Expression -> . Expression DIV Expression
    (25) Expression -> . LPAR Expression RPAR
    (26) Expression -> . NUM
    (27) Expression -> . Id
    (28) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Comparison                     shift and go to state 17
    Expression                     shift and go to state 18
    Id                             shift and go to state 21

state 11

    (12) While -> WHILE . Comparison DO Statements END
    (14) Comparison -> . Expression Relation Expression
    (21) Expression -> . Expression ADD Expression
    (22) Expression -> . Expression SUB Expression
    (23) Expression -> . Expression MUL Expression
    (24) Expression -> . Expression DIV Expression
    (25) Expression -> . LPAR Expression RPAR
    (26) Expression -> . NUM
    (27) Expression -> . Id
    (28) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Comparison                     shift and go to state 22
    Expression                     shift and go to state 18
    Id                             shift and go to state 21

state 12

    (30) Write -> WRITE . Expression
    (21) Expression -> . Expression ADD Expression
    (22) Expression -> . Expression SUB Expression
    (23) Expression -> . Expression MUL Expression
    (24) Expression -> . Expression DIV Expression
    (25) Expression -> . LPAR Expression RPAR
    (26) Expression -> . NUM
    (27) Expression -> . Id
    (28) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Expression                     shift and go to state 23
    Id                             shift and go to state 21

state 13

    (29) Read -> READ . Id
    (28) Id -> . ID

    ID              shift and go to state 15

    Id                             shift and go to state 24

state 14

    (13) Assignment -> Id . BEC Expression

    BEC             shift and go to state 25


state 15

    (28) Id -> ID .

    BEC             reduce using rule 28 (Id -> ID .)
    ADD             reduce using rule 28 (Id -> ID .)
    SUB             reduce using rule 28 (Id -> ID .)
    MUL             reduce using rule 28 (Id -> ID .)
    DIV             reduce using rule 28 (Id -> ID .)
    EQ              reduce using rule 28 (Id -> ID .)
    NEQ             reduce using rule 28 (Id -> ID .)
    LESS            reduce using rule 28 (Id -> ID .)
    LEQ             reduce using rule 28 (Id -> ID .)
    GRTR            reduce using rule 28 (Id -> ID .)
    GEQ             reduce using rule 28 (Id -> ID .)
    SEM             reduce using rule 28 (Id -> ID .)
    $end            reduce using rule 28 (Id -> ID .)
    END             reduce using rule 28 (Id -> ID .)
    ELSE            reduce using rule 28 (Id -> ID .)
    RPAR            reduce using rule 28 (Id -> ID .)
    THEN            reduce using rule 28 (Id -> ID .)
    DO              reduce using rule 28 (Id -> ID .)


state 16

    (3) Statements -> Statements SEM . Statement
    (4) Statement -> . If
    (5) Statement -> . If-Else
    (6) Statement -> . While
    (7) Statement -> . Write
    (8) Statement -> . Read
    (9) Statement -> . Assignment
    (10) If -> . IF Comparison THEN Statements END
    (11) If-Else -> . IF Comparison THEN Statements ELSE Statements END
    (12) While -> . WHILE Comparison DO Statements END
    (30) Write -> . WRITE Expression
    (29) Read -> . READ Id
    (13) Assignment -> . Id BEC Expression
    (28) Id -> . ID

    IF              shift and go to state 10
    WHILE           shift and go to state 11
    WRITE           shift and go to state 12
    READ            shift and go to state 13
    ID              shift and go to state 15

    Statement                      shift and go to state 26
    If                             shift and go to state 4
    If-Else                        shift and go to state 5
    While                          shift and go to state 6
    Write                          shift and go to state 7
    Read                           shift and go to state 8
    Assignment                     shift and go to state 9
    Id                             shift and go to state 14

state 17

    (10) If -> IF Comparison . THEN Statements END
    (11) If-Else -> IF Comparison . THEN Statements ELSE Statements END

    THEN            shift and go to state 27


state 18

    (14) Comparison -> Expression . Relation Expression
    (21) Expression -> Expression . ADD Expression
    (22) Expression -> Expression . SUB Expression
    (23) Expression -> Expression . MUL Expression
    (24) Expression -> Expression . DIV Expression
    (15) Relation -> . EQ
    (16) Relation -> . NEQ
    (17) Relation -> . LESS
    (18) Relation -> . LEQ
    (19) Relation -> . GRTR
    (20) Relation -> . GEQ

    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32
    EQ              shift and go to state 33
    NEQ             shift and go to state 34
    LESS            shift and go to state 35
    LEQ             shift and go to state 36
    GRTR            shift and go to state 37
    GEQ             shift and go to state 38

    Relation                       shift and go to state 28

state 19

    (25) Expression -> LPAR . Expression RPAR
    (21) Expression -> . Expression ADD Expression
    (22) Expression -> . Expression SUB Expression
    (23) Expression -> . Expression MUL Expression
    (24) Expression -> . Expression DIV Expression
    (25) Expression -> . LPAR Expression RPAR
    (26) Expression -> . NUM
    (27) Expression -> . Id
    (28) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Expression                     shift and go to state 39
    Id                             shift and go to state 21

state 20

    (26) Expression -> NUM .

    ADD             reduce using rule 26 (Expression -> NUM .)
    SUB             reduce using rule 26 (Expression -> NUM .)
    MUL             reduce using rule 26 (Expression -> NUM .)
    DIV             reduce using rule 26 (Expression -> NUM .)
    EQ              reduce using rule 26 (Expression -> NUM .)
    NEQ             reduce using rule 26 (Expression -> NUM .)
    LESS            reduce using rule 26 (Expression -> NUM .)
    LEQ             reduce using rule 26 (Expression -> NUM .)
    GRTR            reduce using rule 26 (Expression -> NUM .)
    GEQ             reduce using rule 26 (Expression -> NUM .)
    SEM             reduce using rule 26 (Expression -> NUM .)
    $end            reduce using rule 26 (Expression -> NUM .)
    END             reduce using rule 26 (Expression -> NUM .)
    ELSE            reduce using rule 26 (Expression -> NUM .)
    RPAR            reduce using rule 26 (Expression -> NUM .)
    THEN            reduce using rule 26 (Expression -> NUM .)
    DO              reduce using rule 26 (Expression -> NUM .)


state 21

    (27) Expression -> Id .

    ADD             reduce using rule 27 (Expression -> Id .)
    SUB             reduce using rule 27 (Expression -> Id .)
    MUL             reduce using rule 27 (Expression -> Id .)
    DIV             reduce using rule 27 (Expression -> Id .)
    EQ              reduce using rule 27 (Expression -> Id .)
    NEQ             reduce using rule 27 (Expression -> Id .)
    LESS            reduce using rule 27 (Expression -> Id .)
    LEQ             reduce using rule 27 (Expression -> Id .)
    GRTR            reduce using rule 27 (Expression -> Id .)
    GEQ             reduce using rule 27 (Expression -> Id .)
    SEM             reduce using rule 27 (Expression -> Id .)
    $end            reduce using rule 27 (Expression -> Id .)
    END             reduce using rule 27 (Expression -> Id .)
    ELSE            reduce using rule 27 (Expression -> Id .)
    RPAR            reduce using rule 27 (Expression -> Id .)
    THEN            reduce using rule 27 (Expression -> Id .)
    DO              reduce using rule 27 (Expression -> Id .)


state 22

    (12) While -> WHILE Comparison . DO Statements END

    DO              shift and go to state 40


state 23

    (30) Write -> WRITE Expression .
    (21) Expression -> Expression . ADD Expression
    (22) Expression -> Expression . SUB Expression
    (23) Expression -> Expression . MUL Expression
    (24) Expression -> Expression . DIV Expression

    SEM             reduce using rule 30 (Write -> WRITE Expression .)
    $end            reduce using rule 30 (Write -> WRITE Expression .)
    END             reduce using rule 30 (Write -> WRITE Expression .)
    ELSE            reduce using rule 30 (Write -> WRITE Expression .)
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32


state 24

    (29) Read -> READ Id .

    SEM             reduce using rule 29 (Read -> READ Id .)
    $end            reduce using rule 29 (Read -> READ Id .)
    END             reduce using rule 29 (Read -> READ Id .)
    ELSE            reduce using rule 29 (Read -> READ Id .)


state 25

    (13) Assignment -> Id BEC . Expression
    (21) Expression -> . Expression ADD Expression
    (22) Expression -> . Expression SUB Expression
    (23) Expression -> . Expression MUL Expression
    (24) Expression -> . Expression DIV Expression
    (25) Expression -> . LPAR Expression RPAR
    (26) Expression -> . NUM
    (27) Expression -> . Id
    (28) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Id                             shift and go to state 21
    Expression                     shift and go to state 41

state 26

    (3) Statements -> Statements SEM Statement .

    SEM             reduce using rule 3 (Statements -> Statements SEM Statement .)
    $end            reduce using rule 3 (Statements -> Statements SEM Statement .)
    END             reduce using rule 3 (Statements -> Statements SEM Statement .)
    ELSE            reduce using rule 3 (Statements -> Statements SEM Statement .)


state 27

    (10) If -> IF Comparison THEN . Statements END
    (11) If-Else -> IF Comparison THEN . Statements ELSE Statements END
    (2) Statements -> . Statement
    (3) Statements -> . Statements SEM Statement
    (4) Statement -> . If
    (5) Statement -> . If-Else
    (6) Statement -> . While
    (7) Statement -> . Write
    (8) Statement -> . Read
    (9) Statement -> . Assignment
    (10) If -> . IF Comparison THEN Statements END
    (11) If-Else -> . IF Comparison THEN Statements ELSE Statements END
    (12) While -> . WHILE Comparison DO Statements END
    (30) Write -> . WRITE Expression
    (29) Read -> . READ Id
    (13) Assignment -> . Id BEC Expression
    (28) Id -> . ID

    IF              shift and go to state 10
    WHILE           shift and go to state 11
    WRITE           shift and go to state 12
    READ            shift and go to state 13
    ID              shift and go to state 15

    Statements                     shift and go to state 42
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    If-Else                        shift and go to state 5
    While                          shift and go to state 6
    Write                          shift and go to state 7
    Read                           shift and go to state 8
    Assignment                     shift and go to state 9
    Id                             shift and go to state 14

state 28

    (14) Comparison -> Expression Relation . Expression
    (21) Expression -> . Expression ADD Expression
    (22) Expression -> . Expression SUB Expression
    (23) Expression -> . Expression MUL Expression
    (24) Expression -> . Expression DIV Expression
    (25) Expression -> . LPAR Expression RPAR
    (26) Expression -> . NUM
    (27) Expression -> . Id
    (28) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Expression                     shift and go to state 43
    Id                             shift and go to state 21

state 29

    (21) Expression -> Expression ADD . Expression
    (21) Expression -> . Expression ADD Expression
    (22) Expression -> . Expression SUB Expression
    (23) Expression -> . Expression MUL Expression
    (24) Expression -> . Expression DIV Expression
    (25) Expression -> . LPAR Expression RPAR
    (26) Expression -> . NUM
    (27) Expression -> . Id
    (28) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Expression                     shift and go to state 44
    Id                             shift and go to state 21

state 30

    (22) Expression -> Expression SUB . Expression
    (21) Expression -> . Expression ADD Expression
    (22) Expression -> . Expression SUB Expression
    (23) Expression -> . Expression MUL Expression
    (24) Expression -> . Expression DIV Expression
    (25) Expression -> . LPAR Expression RPAR
    (26) Expression -> . NUM
    (27) Expression -> . Id
    (28) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Expression                     shift and go to state 45
    Id                             shift and go to state 21

state 31

    (23) Expression -> Expression MUL . Expression
    (21) Expression -> . Expression ADD Expression
    (22) Expression -> . Expression SUB Expression
    (23) Expression -> . Expression MUL Expression
    (24) Expression -> . Expression DIV Expression
    (25) Expression -> . LPAR Expression RPAR
    (26) Expression -> . NUM
    (27) Expression -> . Id
    (28) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Expression                     shift and go to state 46
    Id                             shift and go to state 21

state 32

    (24) Expression -> Expression DIV . Expression
    (21) Expression -> . Expression ADD Expression
    (22) Expression -> . Expression SUB Expression
    (23) Expression -> . Expression MUL Expression
    (24) Expression -> . Expression DIV Expression
    (25) Expression -> . LPAR Expression RPAR
    (26) Expression -> . NUM
    (27) Expression -> . Id
    (28) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Expression                     shift and go to state 47
    Id                             shift and go to state 21

state 33

    (15) Relation -> EQ .

    LPAR            reduce using rule 15 (Relation -> EQ .)
    NUM             reduce using rule 15 (Relation -> EQ .)
    ID              reduce using rule 15 (Relation -> EQ .)


state 34

    (16) Relation -> NEQ .

    LPAR            reduce using rule 16 (Relation -> NEQ .)
    NUM             reduce using rule 16 (Relation -> NEQ .)
    ID              reduce using rule 16 (Relation -> NEQ .)


state 35

    (17) Relation -> LESS .

    LPAR            reduce using rule 17 (Relation -> LESS .)
    NUM             reduce using rule 17 (Relation -> LESS .)
    ID              reduce using rule 17 (Relation -> LESS .)


state 36

    (18) Relation -> LEQ .

    LPAR            reduce using rule 18 (Relation -> LEQ .)
    NUM             reduce using rule 18 (Relation -> LEQ .)
    ID              reduce using rule 18 (Relation -> LEQ .)


state 37

    (19) Relation -> GRTR .

    LPAR            reduce using rule 19 (Relation -> GRTR .)
    NUM             reduce using rule 19 (Relation -> GRTR .)
    ID              reduce using rule 19 (Relation -> GRTR .)


state 38

    (20) Relation -> GEQ .

    LPAR            reduce using rule 20 (Relation -> GEQ .)
    NUM             reduce using rule 20 (Relation -> GEQ .)
    ID              reduce using rule 20 (Relation -> GEQ .)


state 39

    (25) Expression -> LPAR Expression . RPAR
    (21) Expression -> Expression . ADD Expression
    (22) Expression -> Expression . SUB Expression
    (23) Expression -> Expression . MUL Expression
    (24) Expression -> Expression . DIV Expression

    RPAR            shift and go to state 48
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32


state 40

    (12) While -> WHILE Comparison DO . Statements END
    (2) Statements -> . Statement
    (3) Statements -> . Statements SEM Statement
    (4) Statement -> . If
    (5) Statement -> . If-Else
    (6) Statement -> . While
    (7) Statement -> . Write
    (8) Statement -> . Read
    (9) Statement -> . Assignment
    (10) If -> . IF Comparison THEN Statements END
    (11) If-Else -> . IF Comparison THEN Statements ELSE Statements END
    (12) While -> . WHILE Comparison DO Statements END
    (30) Write -> . WRITE Expression
    (29) Read -> . READ Id
    (13) Assignment -> . Id BEC Expression
    (28) Id -> . ID

    IF              shift and go to state 10
    WHILE           shift and go to state 11
    WRITE           shift and go to state 12
    READ            shift and go to state 13
    ID              shift and go to state 15

    Statements                     shift and go to state 49
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    If-Else                        shift and go to state 5
    While                          shift and go to state 6
    Write                          shift and go to state 7
    Read                           shift and go to state 8
    Assignment                     shift and go to state 9
    Id                             shift and go to state 14

state 41

    (13) Assignment -> Id BEC Expression .
    (21) Expression -> Expression . ADD Expression
    (22) Expression -> Expression . SUB Expression
    (23) Expression -> Expression . MUL Expression
    (24) Expression -> Expression . DIV Expression

    SEM             reduce using rule 13 (Assignment -> Id BEC Expression .)
    $end            reduce using rule 13 (Assignment -> Id BEC Expression .)
    END             reduce using rule 13 (Assignment -> Id BEC Expression .)
    ELSE            reduce using rule 13 (Assignment -> Id BEC Expression .)
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32


state 42

    (10) If -> IF Comparison THEN Statements . END
    (11) If-Else -> IF Comparison THEN Statements . ELSE Statements END
    (3) Statements -> Statements . SEM Statement

    END             shift and go to state 50
    ELSE            shift and go to state 51
    SEM             shift and go to state 16


state 43

    (14) Comparison -> Expression Relation Expression .
    (21) Expression -> Expression . ADD Expression
    (22) Expression -> Expression . SUB Expression
    (23) Expression -> Expression . MUL Expression
    (24) Expression -> Expression . DIV Expression

    THEN            reduce using rule 14 (Comparison -> Expression Relation Expression .)
    DO              reduce using rule 14 (Comparison -> Expression Relation Expression .)
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32


state 44

    (21) Expression -> Expression ADD Expression .
    (21) Expression -> Expression . ADD Expression
    (22) Expression -> Expression . SUB Expression
    (23) Expression -> Expression . MUL Expression
    (24) Expression -> Expression . DIV Expression

    ADD             reduce using rule 21 (Expression -> Expression ADD Expression .)
    SUB             reduce using rule 21 (Expression -> Expression ADD Expression .)
    EQ              reduce using rule 21 (Expression -> Expression ADD Expression .)
    NEQ             reduce using rule 21 (Expression -> Expression ADD Expression .)
    LESS            reduce using rule 21 (Expression -> Expression ADD Expression .)
    LEQ             reduce using rule 21 (Expression -> Expression ADD Expression .)
    GRTR            reduce using rule 21 (Expression -> Expression ADD Expression .)
    GEQ             reduce using rule 21 (Expression -> Expression ADD Expression .)
    SEM             reduce using rule 21 (Expression -> Expression ADD Expression .)
    $end            reduce using rule 21 (Expression -> Expression ADD Expression .)
    END             reduce using rule 21 (Expression -> Expression ADD Expression .)
    ELSE            reduce using rule 21 (Expression -> Expression ADD Expression .)
    RPAR            reduce using rule 21 (Expression -> Expression ADD Expression .)
    THEN            reduce using rule 21 (Expression -> Expression ADD Expression .)
    DO              reduce using rule 21 (Expression -> Expression ADD Expression .)
    MUL             shift and go to state 31
    DIV             shift and go to state 32

  ! MUL             [ reduce using rule 21 (Expression -> Expression ADD Expression .) ]
  ! DIV             [ reduce using rule 21 (Expression -> Expression ADD Expression .) ]
  ! ADD             [ shift and go to state 29 ]
  ! SUB             [ shift and go to state 30 ]


state 45

    (22) Expression -> Expression SUB Expression .
    (21) Expression -> Expression . ADD Expression
    (22) Expression -> Expression . SUB Expression
    (23) Expression -> Expression . MUL Expression
    (24) Expression -> Expression . DIV Expression

    ADD             reduce using rule 22 (Expression -> Expression SUB Expression .)
    SUB             reduce using rule 22 (Expression -> Expression SUB Expression .)
    EQ              reduce using rule 22 (Expression -> Expression SUB Expression .)
    NEQ             reduce using rule 22 (Expression -> Expression SUB Expression .)
    LESS            reduce using rule 22 (Expression -> Expression SUB Expression .)
    LEQ             reduce using rule 22 (Expression -> Expression SUB Expression .)
    GRTR            reduce using rule 22 (Expression -> Expression SUB Expression .)
    GEQ             reduce using rule 22 (Expression -> Expression SUB Expression .)
    SEM             reduce using rule 22 (Expression -> Expression SUB Expression .)
    $end            reduce using rule 22 (Expression -> Expression SUB Expression .)
    END             reduce using rule 22 (Expression -> Expression SUB Expression .)
    ELSE            reduce using rule 22 (Expression -> Expression SUB Expression .)
    RPAR            reduce using rule 22 (Expression -> Expression SUB Expression .)
    THEN            reduce using rule 22 (Expression -> Expression SUB Expression .)
    DO              reduce using rule 22 (Expression -> Expression SUB Expression .)
    MUL             shift and go to state 31
    DIV             shift and go to state 32

  ! MUL             [ reduce using rule 22 (Expression -> Expression SUB Expression .) ]
  ! DIV             [ reduce using rule 22 (Expression -> Expression SUB Expression .) ]
  ! ADD             [ shift and go to state 29 ]
  ! SUB             [ shift and go to state 30 ]


state 46

    (23) Expression -> Expression MUL Expression .
    (21) Expression -> Expression . ADD Expression
    (22) Expression -> Expression . SUB Expression
    (23) Expression -> Expression . MUL Expression
    (24) Expression -> Expression . DIV Expression

    ADD             reduce using rule 23 (Expression -> Expression MUL Expression .)
    SUB             reduce using rule 23 (Expression -> Expression MUL Expression .)
    MUL             reduce using rule 23 (Expression -> Expression MUL Expression .)
    DIV             reduce using rule 23 (Expression -> Expression MUL Expression .)
    EQ              reduce using rule 23 (Expression -> Expression MUL Expression .)
    NEQ             reduce using rule 23 (Expression -> Expression MUL Expression .)
    LESS            reduce using rule 23 (Expression -> Expression MUL Expression .)
    LEQ             reduce using rule 23 (Expression -> Expression MUL Expression .)
    GRTR            reduce using rule 23 (Expression -> Expression MUL Expression .)
    GEQ             reduce using rule 23 (Expression -> Expression MUL Expression .)
    SEM             reduce using rule 23 (Expression -> Expression MUL Expression .)
    $end            reduce using rule 23 (Expression -> Expression MUL Expression .)
    END             reduce using rule 23 (Expression -> Expression MUL Expression .)
    ELSE            reduce using rule 23 (Expression -> Expression MUL Expression .)
    RPAR            reduce using rule 23 (Expression -> Expression MUL Expression .)
    THEN            reduce using rule 23 (Expression -> Expression MUL Expression .)
    DO              reduce using rule 23 (Expression -> Expression MUL Expression .)

  ! ADD             [ shift and go to state 29 ]
  ! SUB             [ shift and go to state 30 ]
  ! MUL             [ shift and go to state 31 ]
  ! DIV             [ shift and go to state 32 ]


state 47

    (24) Expression -> Expression DIV Expression .
    (21) Expression -> Expression . ADD Expression
    (22) Expression -> Expression . SUB Expression
    (23) Expression -> Expression . MUL Expression
    (24) Expression -> Expression . DIV Expression

    ADD             reduce using rule 24 (Expression -> Expression DIV Expression .)
    SUB             reduce using rule 24 (Expression -> Expression DIV Expression .)
    MUL             reduce using rule 24 (Expression -> Expression DIV Expression .)
    DIV             reduce using rule 24 (Expression -> Expression DIV Expression .)
    EQ              reduce using rule 24 (Expression -> Expression DIV Expression .)
    NEQ             reduce using rule 24 (Expression -> Expression DIV Expression .)
    LESS            reduce using rule 24 (Expression -> Expression DIV Expression .)
    LEQ             reduce using rule 24 (Expression -> Expression DIV Expression .)
    GRTR            reduce using rule 24 (Expression -> Expression DIV Expression .)
    GEQ             reduce using rule 24 (Expression -> Expression DIV Expression .)
    SEM             reduce using rule 24 (Expression -> Expression DIV Expression .)
    $end            reduce using rule 24 (Expression -> Expression DIV Expression .)
    END             reduce using rule 24 (Expression -> Expression DIV Expression .)
    ELSE            reduce using rule 24 (Expression -> Expression DIV Expression .)
    RPAR            reduce using rule 24 (Expression -> Expression DIV Expression .)
    THEN            reduce using rule 24 (Expression -> Expression DIV Expression .)
    DO              reduce using rule 24 (Expression -> Expression DIV Expression .)

  ! ADD             [ shift and go to state 29 ]
  ! SUB             [ shift and go to state 30 ]
  ! MUL             [ shift and go to state 31 ]
  ! DIV             [ shift and go to state 32 ]


state 48

    (25) Expression -> LPAR Expression RPAR .

    ADD             reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    SUB             reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    MUL             reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    DIV             reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    EQ              reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    NEQ             reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    LESS            reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    LEQ             reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    GRTR            reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    GEQ             reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    SEM             reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    $end            reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    END             reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    ELSE            reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    RPAR            reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    THEN            reduce using rule 25 (Expression -> LPAR Expression RPAR .)
    DO              reduce using rule 25 (Expression -> LPAR Expression RPAR .)


state 49

    (12) While -> WHILE Comparison DO Statements . END
    (3) Statements -> Statements . SEM Statement

    END             shift and go to state 52
    SEM             shift and go to state 16


state 50

    (10) If -> IF Comparison THEN Statements END .

    SEM             reduce using rule 10 (If -> IF Comparison THEN Statements END .)
    $end            reduce using rule 10 (If -> IF Comparison THEN Statements END .)
    END             reduce using rule 10 (If -> IF Comparison THEN Statements END .)
    ELSE            reduce using rule 10 (If -> IF Comparison THEN Statements END .)


state 51

    (11) If-Else -> IF Comparison THEN Statements ELSE . Statements END
    (2) Statements -> . Statement
    (3) Statements -> . Statements SEM Statement
    (4) Statement -> . If
    (5) Statement -> . If-Else
    (6) Statement -> . While
    (7) Statement -> . Write
    (8) Statement -> . Read
    (9) Statement -> . Assignment
    (10) If -> . IF Comparison THEN Statements END
    (11) If-Else -> . IF Comparison THEN Statements ELSE Statements END
    (12) While -> . WHILE Comparison DO Statements END
    (30) Write -> . WRITE Expression
    (29) Read -> . READ Id
    (13) Assignment -> . Id BEC Expression
    (28) Id -> . ID

    IF              shift and go to state 10
    WHILE           shift and go to state 11
    WRITE           shift and go to state 12
    READ            shift and go to state 13
    ID              shift and go to state 15

    Statements                     shift and go to state 53
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    If-Else                        shift and go to state 5
    While                          shift and go to state 6
    Write                          shift and go to state 7
    Read                           shift and go to state 8
    Assignment                     shift and go to state 9
    Id                             shift and go to state 14

state 52

    (12) While -> WHILE Comparison DO Statements END .

    SEM             reduce using rule 12 (While -> WHILE Comparison DO Statements END .)
    $end            reduce using rule 12 (While -> WHILE Comparison DO Statements END .)
    END             reduce using rule 12 (While -> WHILE Comparison DO Statements END .)
    ELSE            reduce using rule 12 (While -> WHILE Comparison DO Statements END .)


state 53

    (11) If-Else -> IF Comparison THEN Statements ELSE Statements . END
    (3) Statements -> Statements . SEM Statement

    END             shift and go to state 54
    SEM             shift and go to state 16


state 54

    (11) If-Else -> IF Comparison THEN Statements ELSE Statements END .

    SEM             reduce using rule 11 (If-Else -> IF Comparison THEN Statements ELSE Statements END .)
    $end            reduce using rule 11 (If-Else -> IF Comparison THEN Statements ELSE Statements END .)
    END             reduce using rule 11 (If-Else -> IF Comparison THEN Statements ELSE Statements END .)
    ELSE            reduce using rule 11 (If-Else -> IF Comparison THEN Statements ELSE Statements END .)

